[package]
name = "plotter"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.5.0"
imgui-wgpu = "0.11.0"
futures = "0.3.6"
imgui-winit-support = "0.5.0"
winit = "0.22.0"
implot = "0.1.0"
wgpu = "0.6.0"
wgpu-subscriber = "0.1.0"